# system-programming-assignments

./: .gitignore  readme.md
Assignment_1/: CMakeLists.txt
Assignment_1/src/: CMakeLists.txt  libcoro.c  libcoro.h  libsort.c  libsort.h  libutil.c  libutil.h  main.c
Assignment_2/: .gitignore  CMakeLists.txt  checker.py  generator.py  readme.md  tests.txt
Assignment_2/src/: CMakeLists.txt  main.c
Assignment_2/src/executor/: CMakeLists.txt  executor.c  executor.h
Assignment_2/src/parser/: CMakeLists.txt  parser.c  parser.h
Assignment_2/test/: CMakeLists.txt  test_main.c
Assignment_2/test/components/: executor_ct.cpp  parser_сt.cpp
Assignment_2/test/units/: parser_ut.cpp
Assignment_3/: Makefile  test.c  userfs.c  userfs.h
Assignment_4/: Makefile  test.c  thread_pool.c  thread_pool.h
utils/: unit.h
utils/heap_help/: heap_help.c  heap_help.h
